q-color: fix infinite loop in q-tabs align property when scrollbars appear in q-color (#5466)
* q-color: fix infinite loop in q-tabs align property when scrollbars appear in q-color

* q-color __getFooter: added indentation

* Update QColor.styl

--- a/ui/src/components/color/QColor.styl
+++ b/ui/src/components/color/QColor.styl
@@ -4,7 +4,7 @@
   max-width 350px
   vertical-align top
 
-  min-width 150px
+  min-width 220px
 
   border-radius $generic-border-radius
   box-shadow $shadow-2
@@ -51,6 +51,8 @@
     background-image url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAH0lEQVQoU2NkYGAwZkAFZ5G5jPRRgOYEVDeB3EBjBQBOZwTVugIGyAAAAABJRU5ErkJggg==') !important
 
   &__footer
+    height 40px
+
     .q-tab--inactive
       background linear-gradient(to bottom, rgba(0,0,0,.3) 0%, rgba(0,0,0,.15) 25%, rgba(0,0,0,.1))
 
